# genom3

./: .gitignore  CHANGES  CMakeLists.txt  COPYING  Doxyfile.in  Makefile.am  README  TODO  bootstrap  configure.ac  genom3-c-client.pc.in  genom3.pc.in  profundis
autoconf/: ax_pthread.m4  eltclsh.m4  tcl.m4
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  export_ast.cpp  export_containers.cpp  export_idl.cpp  ptr_map_indexing_suite.hpp  pythoninterpreter.cpp  pythoninterpreter.h  test.cpp
bindings/swig/: CMakeLists.txt  genom.i  genom_wrap.cxx  tclinterpreter.cpp  tclinterpreter.h  tclwrappers.cpp  test.cpp
bindings/tcl/: CMakeLists.txt  ast_binding.h  tclinterpreter.cpp  tclinterpreter.h  test.cpp
cmake/: FindFLEX.cmake
compat/: Makefile.am  getline.c  strlcat.c  strlcpy.c  xwarnx.c
core/: CMakeLists.txt  gen_to_gnm.pl  main.cpp  templateinterpreter.cpp  templateinterpreter.h  test.cpp
doc/: Makefile.am  adocgen.awk  asciidoc.css  docgen.awk  docinfo.html  genom3.texi  grammar-tokens  index.html  mdate.c  optgen.awk  texigen.awk  y2tgen.awk
doc/adoc/: _Sidebar.adoc  copying.adoc  index.adoc  introduction.adoc  manual.adoc  overview.adoc  running.adoc
doc/adoc/dotgen/: _Sidebar.adoc  codel.adoc  component.adoc  grammar.adoc  idltype-base.adoc  idltype-constr.adoc  idltype-tmpl.adoc  idltype.adoc  ids.adoc  index.adoc  interface.adoc  keywords.adoc  module.adoc  port.adoc  pragma.adoc  preprocessing.adoc  service.adoc  specification.adoc  task.adoc  typedef.adoc  typespec.adoc
doc/adoc/mappings/: _Sidebar.adoc  c++.adoc  c.adoc  index.adoc
doc/adoc/model/: _Sidebar.adoc  index.adoc
doc/adoc/templates/: _Sidebar.adoc  cmd-codel.adoc  cmd-component.adoc  cmd-dotgen-genom.adoc  cmd-dotgen.adoc  cmd-engine.adoc  cmd-language.adoc  cmd-parameter.adoc  cmd-port.adoc  cmd-service.adoc  cmd-task.adoc  cmd-template.adoc  cmd-type.adoc  index.adoc  interactive.adoc  mappings.adoc  skeleton.adoc  tcl-engine.adoc
doc/adoc/tutorials/: _Sidebar.adoc  add-function.adoc  external-software.adoc  ids.adoc  index.adoc  workflow.adoc
doc/roff/: genom.mdoc
doc/sty/: genom.css  genom.header.html  genom.mst  genom.sty  genom.texi  genom.tth  texinfo.tex
doc/tex/: dotgen-grammar.tex  genom.bib  genom.tex  mappings-c++.tex  mappings-c.tex  mappings.tex  running.tex  tcl-engine.tex
doc/texi/: dotgen-grammar.texi  mappings-c++.texi  mappings-c.texi  mappings.texi  running.texi  tcl-backend.texi  tcl-engine.texi  templates.texi
engine/tcl/: Makefile.am  buildenv-autoconf.tcl  codel.c  component.c  dotgen.c  engine.c  engine.h  engine.tcl  idltype.c  language-c++.tcl  language-c.tcl  language-tcl.tcl  language.tcl  lcs.tcl  md5.tcl  merge.tcl  object.c  object.tcl  parameter.c  port.c  remote.c  service.c  task.c  template.tcl
engine/tcl/autoconf/: top.Makefile.am  top.configure.ac
parser/: CMakeLists.txt  ast.cpp  ast.h  driver.cpp  driver.h  lexer.h  lexer.ll  parser.yy
parser/test/: CMakeLists.txt  lexertest_main.cpp
parsers/: CMakeLists.txt
parsers/genom/: CMakeLists.txt  driver.cpp  driver.h  lexer.cpp  lexer.ll  location.hh  parser.cpp  parser.hpp  parser.yy  position.hh  stack.hh
parsers/genom/test/: CMakeLists.txt  demo.gnm  lexertest_main.cpp  parser_unit_test.cpp  test.gnm
parsers/template_info/: CMakeLists.txt  lexer.cpp  lexer.h  lexer.ll  location.hh  parser.cpp  parser.hpp  parser.yy  position.hh  stack.hh  templateinterpreter.cpp  templateinterpreter.h  y.tab.h
parsers/template_info/test/: CMakeLists.txt  template.info  template_info_test.cpp
pcpp/: Makefile.am  cpp.c  cpp.h  pragma.c  token.c
pcpp/tests/: res100  test100  test101  test102  x.pc
regress/: Makefile.am  component.gen  datatypes.gen  generate.gen  preprocess.gen  test.sh
regress/basics/: async.test  cpp.test  extends.test  initializer.test  interrupts.test  parser.test  provides.test  require.test
regress/tcl-engine/: codel.test  component.test  dotgen.test  engine.test  language-c++.test  language-c.test  language.test  merge.test  mutex.test  object.test  remote.test  service.test  template.test  type.test
regress/template/: template.tcl
regress/templates/: genom.test  mappings.test  skeleton.test
src/: Makefile.am  codel.c  component.c  const.c  cpp.c  declarator.c  dotgen.l  dotgen.y  engine-tcl.c  engine.c  genom.h  hash.c  idltype.c  initializer.c  main.c  options.txt  parameter.c  port.c  postproc.c  property.c  scope.c  service.c  string.c  task.c
src/dotgen/: codel.y  component.y  expr.y  idldecl.y  idlscope.y  idltype-base.y  idltype-constr.y  idltype-tmpl.y  idltype.y  ids.y  interface.y  main.y  parameter.y  port.y  service.y  task.y
sys/tcl/: Makefile.am  buildenv.tcl  dotgen.c  dotgen.tcl  engine.c  engine.h  engine.tcl  language-c.tcl  language.tcl  mapping-c.tcl  mapping.tcl  object.c  options.tcl  template.tcl
templates/: utils.py
templates/openRTM/: CMakeLists.txt  Control.cpp  Control.h  ControlComp.cpp  ControlImpl.cpp  ControlImpl.h  ControlTask.idl  ExecServices.cpp  ExecServices.h  ExecTask.cpp  ExecTask.h  ExecTask.idl  ExecTaskComp.cpp  ExecTaskImpl.cpp  ExecTaskImpl.h  FindOpenRTM.cmake  Test.cpp  Test.h  TestComp.cpp  convert.cpp  corbavisitor.py  printer.cpp  printer.h  rtc.conf  struct.h  template.info  userCodels.h  userStruct.h  utils.py
templates/skeleton/: Makefile.am  ag_templates.m4  codels.Makefile.am  codels.Makefile.user.am  codels.codel.c  codels.codel.cc  component-uninstalled.pc.in  component.pc.in  libcodels-uninstalled.pc.in  libcodels.pc.in  readme.adoc  template.tcl  top.Makefile.am  top.configure.ac  top.configure.user.ac
templates/yarp/: CMakeLists.txt  Comp.cpp  Error.hpp  ExecServices.cpp  ExecServices.hpp  ExecTask.cpp  ExecTask.hpp  FindYARP.cmake  Module.cpp  Module.hpp  Struct.hpp  Test.cpp  YarpCodec.cpp  YarpCodec.hpp  template.info  userCodels.h  utils.py
templates/yarp/lib/: DataServer.hpp  Events.cpp  Events.hpp  Header.hpp  OutPort.hpp  RepliesReader.hpp  RepliesWriter.hpp  RqstReader.hpp  RqstWriter.hpp  Struct.hpp  YarpCodec.hpp  logger.c  logger.h
utils/: CMakeLists.txt  ast.cpp  (+18 more)
(+106 files in other folders)
